<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/createLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_comment"
            android:textAlignment="center"
            android:textSize="32dp"  />

        <EditText
            android:id="@+id/nameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textSize="32dp" />

        <EditText
            android:id="@+id/commentTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/comment"
            android:inputType="textPersonName"
            android:textSize="32dp" />

        <Button
            android:id="@+id/createBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_btn"
            android:textSize="32dp" />

        <TextView
            android:id="@+id/selectLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_comment"
            android:textAlignment="center"
            android:textSize="32dp" />

        <Spinner
            android:id="@+id/commentSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32dp"  />

        <Button
            android:id="@+id/viewBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view"
            android:textSize="32dp" />

        <TextView
            android:id="@+id/viewLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:textAlignment="center"
            android:textSize="32dp" />

        <EditText
            android:id="@+id/editNameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="32dp" />

        <EditText
            android:id="@+id/editCommentTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="32dp" />

        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textSize="32dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>